examples/test/testpolicy9806.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy9806
  namespace: namespace277
spec:
  podSelector:
    matchLabels:
      key2: value11
      key39: value35
      key49: value36
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key12: value5
          key38: value19
      podSelector:
        matchLabels:
          key25: value9
          key44: value34
